# aiagent

./: .env.example  .gitignore  ACCOUNT_MANAGEMENT_SUCCESS.md  IMPLEMENTATION_COMPLETE.md  README.md  README_GITHUB.md  demo_account_management.sh  docker-compose.yml
.github/: copilot-instructions.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  quick_test.py  requirements.txt  startup.sh  test_account_management.py  test_auth.py  test_history_auth.py  test_history_endpoints.py
backend/app/: db.py  deps.py  init_db.py  main.py  models.py  models.py.backup  schemas.py
backend/app/api/: auth.py  billing.py  files.py  gpt.py  router.py  users.py  webhook.py
backend/app/utils/: __init__.py  data_cleaning.py  openai_client.py  plan_limits.py
backend/migrations/: env.py
backend/migrations/versions/: 423d82b915b7_add_stripe_customer_id_to_user.py  add_plan_limits_add_plan_limit_columns.py  d1f75c050763_add_stripe_customer_id_to_user.py  f337765b5444_add_file_metadata_columns.py
dashboards/: Dockerfile  README.md  app.py
docs/: ACCOUNT_MANAGEMENT.md  AUTHENTICATION.md  ENHANCED_FILE_UPLOAD_COMPLETE.md  PROJECT_COMMANDS.md
frontend/: Dockerfile  package-lock.json
tests/: final_test.py  test_advanced_data_cleaning.py  test_data_cleaning.py  test_data_cleaning_api.py  test_file_upload_system.py  test_gpt_summarize_api.py  test_plan_limits.py
tests/data/: cleaned_test_data.csv  messy_api_test_data.csv  messy_test_data.csv  test_data.csv  test_data.txt  test_dirty_data.csv  test_format.xlsx
