[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for full-stack app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
SQLAlchemy = "^2.0.0"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
pydantic = "^2.0.0"
openai = "^1.0.0"
alembic = "^1.16.1"
psycopg2-binary = "^2.9.10"
email-validator = "^2.1.0"
pandas = "^2.0.0"
openpyxl = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
